version/0.34/_sources/api/solver/_autosummary/settings/physics_1.rst.txt
:orphan:

.. _physics_1:

physics
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.physics_1
    :show-inheritance:

.. rubric:: Attributes

==============================   ==================================

Attribute                                                   Summary

==============================   ==================================
:ref:`volumes <volumes>`                       Volumes definitions.

:ref:`boundaries <boundaries>`                  'boundaries' child.

:ref:`interfaces <interfaces>`       Physics interface definitions.

==============================   ==================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`setup <setup>`       'setup' child.

====================   ==================

