version/0.38/_sources/api/solver/_autosummary/settings/physics_1.rst.txt
:orphan:

.. _physics_1:

physics
=======

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.physics_1
    :show-inheritance:

.. rubric:: Attributes

==============================   ===================================================

Attribute                                                                    Summary

==============================   ===================================================
:ref:`volumes <volumes>`                                        Volumes definitions.

:ref:`boundaries <boundaries>`       Defines physics boundaries for a volume region.

:ref:`interfaces <interfaces>`                        Physics interface definitions.

==============================   ===================================================

.. rubric:: Methods

==========================================   =====================================

Method                                                                     Summary

==========================================   =====================================
:ref:`restore_topology <restore_topology>`       Set the state of physics objects.

==========================================   =====================================

.. rubric:: Included in:

====================   ==================================================================================================================================

Parent                                                                                                                                            Summary

====================   ==================================================================================================================================
:ref:`setup <setup>`       Provides access to all primary setup options including general settings, models, boundary conditions and solver configuration.

====================   ==================================================================================================================================

